# PPGSO_OpenGL_SP

./: .gitignore  CMakeLists.txt
cmake/: bin2c.cmake
resources/objects/: box.mtl  left_wall.mtl  policka_real.mtl  powerup.blend  powerup.mtl  small_table.mtl  wall.mtl
resources/objects/cars/: car_1.mtl
resources/objects/home/: roof.mtl
resources/objects/house/: Bathtub.mtl  Bed.mtl  Casa.mtl  Chao.mtl  Luminaria.mtl  Sink.mtl  Table.mtl  Teto.mtl  Ventilator.mtl  Vidro.mtl  Window3.mtl  door1.mtl
resources/objects/menu/: bird.mtl  cone.mtl
resources/objects/pool/: pool1.mtl  pool_volume1.mtl
resources/objects/sofa/: sofa.mtl
resources/objects/table_circle/: table.mtl
src/: main.cpp
src/common/: camera.cpp  camera.h  day_scene.cpp  day_scene.h  main_window.cpp  main_window.h  menu_scene.cpp  menu_scene.h  scene.cpp  scene.h
src/objects/: background.cpp  background.h  car.cpp  car.h  common.h  house.cpp  house.h  light.cpp  light.h  object.cpp  object.h  player.cpp  player.h  shadow.cpp  shadow.h  shape.cpp  shape.h  wall.cpp  wall.h  weather.cpp  weather.h  world.cpp  world.h
